--- a/assets/src/index.html
+++ b/assets/src/index.html
@@ -3,9 +3,9 @@
 <html lang="ja">
 
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Simple-Pomodoro-Timer-adopting-bootstrap5-css" />
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Simple-Pomodoro-Timer-adopting-bootstrap5-css">
   <title>SimplePomodoroTimer</title>
 </head>
 
@@ -18,7 +18,7 @@
   <div id="div1" class="container-fluid p-3 bg-danger bg-opacity-75 text-white text-center">
     <div class="container-fluid p-3">
       <p id="hd1" class="fs-4 fw-bold">
-        集中する時間をこちらから<br />お選びください。
+        集中する時間をこちらから<br>お選びください。
       </p>
       <div class="btn-group btn-group-lg">
         <button id="btn25" class="btn btn-primary">25mins.</button>
@@ -28,7 +28,7 @@
     </div>
     <div class="container-fluid p-3">
       <p id="hd2" class="fs-4 fw-bold">
-        クリックすると<br />5分の休憩が始まります。
+        クリックすると<br>5分の休憩が始まります。
       </p>
       <button id="btn5" class="btn btn-warning btn-lg">05mins.</button>
     </div>
@@ -39,7 +39,7 @@
     </div>
     <div id="div3" class="container-fluid p-3 invisible">
       <p class="fs-4 fw-bold">
-        何かお困りでしたら<br />
+        何かお困りでしたら<br>
         リセットしてください。
       </p>
       <button id="btn_RST" class="btn btn-info btn-lg">Reset.</button>
