--- a/assets/src/index.html
+++ b/assets/src/index.html
@@ -30,7 +30,7 @@
       <p id="hd2" class="fs-4 fw-bold">
         クリックすると<br>5分の休憩が始まります。
       </p>
-      <button id="btn5" class="btn btn-warning btn-lg">05mins.</button>
+      <button id="btn5" class="btn btn-warning btn-lg" disabled>05mins.</button>
     </div>
     <div id="div2" class="container-fluid p-3 invisible">
       <p class="display-1 fw-bolder">
