--- a/assets/src/index.html
+++ b/assets/src/index.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Simple-Pomodoro-Timer-adopting-bootstrap5-css">
+  <meta name="theme-color" content="#000000">
   <link rel="manifest" href="manifest.json">
   <title>SimplePomodoroTimer</title>
 </head>
@@ -47,7 +48,7 @@
     </div>
   </div>
   <div class="container-fluid p-0 bg-success text-white text-center">
-    <footer class="footer sticky-sm-bottom">
+    <footer class="sticky-sm-bottom">
       <i class="bi-alarm"></i> This product is dedicated to Ms. Cathy and Mr.
       Mo. Since Feb, 2022 (C) Y.K.
       <i class="bi bi-arrows-fullscreen" id="toggleBtn"></i>
