--- a/assets/src/index.html
+++ b/assets/src/index.html
@@ -48,7 +48,7 @@
     </div>
   </div>
   <div class="container-fluid p-0 bg-success text-white text-center">
-    <footer class="sticky-sm-bottom">
+    <footer>
       <i class="bi-alarm"></i> This product is dedicated to Ms. Cathy and Mr.
       Mo. Since Feb, 2022 (C) Y.K.
       <i class="bi bi-arrows-fullscreen" id="toggleBtn"></i>
